--- a/index.html
+++ b/index.html
@@ -30,74 +30,94 @@
         <div class="col s12 m12">
           <div class="card blue-grey darken-1">
             <div class="card-content white-text">
-              <span class="card-title">Card Title</span>
-              <p>I am a very simple card. I am good at containing small bits of information.
-              I am convenient because I require little markup to use effectively.</p>
-              <div class="row">
-                <div class="col s12 m5">
-                  <div class="card-panel teal">
-                    <span class="white-text">1</span>
-                  </div>
-                </div>
+              <span class="card-title">Calculator</span>
+              <div class="card-panel">
+                <p class="blue-text text-darken-2">Hola</p>
               </div>
               <div class="row">
-                <div class="col s12 m5">
-                  <div class="card-panel teal">
-                    <span class="white-text">2</span>
-                  </div>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col s12 m5">
-                  <div class="card-panel teal">
-                    <span class="white-text">3</span>
-                  </div>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col s12 m5">
-                  <div class="card-panel teal">
-                    <span class="white-text">4</span>
-                  </div>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col s12 m5">
-                  <div class="card-panel teal">
-                    <span class="white-text">5</span>
-                  </div>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col s12 m5">
-                  <div class="card-panel teal">
-                    <span class="white-text">6</span>
-                  </div>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col s12 m5">
-                  <div class="card-panel teal">
-                    <span class="white-text">7</span>
-                  </div>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col s12 m5">
-                  <div class="card-panel teal">
-                    <span class="white-text">8</span>
-                  </div>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col s12 m5">
-                  <div class="card-panel teal">
-                    <span class="white-text">9</span>
-                  </div>
-                </div>
-              </div>
-              
 
+                <div class="col s12">
+                  <div class="col s3">
+                    <div class="card-panel teal">
+                      <span class="white-text">7</span>
+                    </div>
+                  </div>
+                  <div class="col s3">
+                    <div class="card-panel teal">
+                      <span class="white-text">8</span>
+                    </div>
+                  </div>
+                  <div class="col s3">
+                    <div class="card-panel teal">
+                      <span class="white-text">9</span>
+                    </div>
+                  </div>
+                  <div class="col s3">
+                    <div class="card-panel teal">
+                      <span class="white-text">C</span>
+                    </div>
+                  </div>
+                </div>
+                <div class="col s12">
+                  <div class="col s3">
+                    <div class="card-panel teal">
+                      <span class="white-text">4</span>
+                    </div>
+                  </div>
+                  <div class="col s3">
+                    <div class="card-panel teal">
+                      <span class="white-text">5</span>
+                    </div>
+                  </div>
+                  <div class="col s3">
+                    <div class="card-panel teal">
+                      <span class="white-text">6</span>
+                    </div>
+                  </div>
+                  <div class="col s3">
+                    <a class="btn-floating btn-large waves-effect waves-light red"><i class="material-icons">add</i></a>
+                  </div>
+                </div>
+                <div class="col s12">
+                  <div class="col s3">
+                    <div class="card-panel teal">
+                      <span class="white-text">1</span>
+                    </div>
+                  </div>
+                  <div class="col s3">
+                    <div class="card-panel teal">
+                      <span class="white-text">2</span>
+                    </div>
+                  </div>
+                  <div class="col s3">
+                    <div class="card-panel teal">
+                      <span class="white-text">3</span>
+                    </div>
+                  </div>
+                  <div class="col s3">
+                    <a class="btn-floating btn-large waves-effect waves-light red"><i class="material-icons">remove</i></a>
+                  </div>
+                </div>
+                <div class="col s12">
+                  <div class="col s3">
+                    <div class="card-panel teal">
+                      <span class="white-text">.</span>
+                    </div>
+                  </div>
+                  <div class="col s3">
+                    <div class="card-panel teal">
+                      <span class="white-text">0</span>
+                    </div>
+                  </div>
+                  <div class="col s3">
+                    <div class="card-panel teal">
+                      <span class="white-text">=</span>
+                    </div>
+                  </div>
+                  <div class="col s3">
+                    <a class="btn-floating btn-large waves-effect waves-light red"><i class="material-icons">clear</i></a>
+                  </div>
+                </div>
             </div>
             <div class="card-action">
               <a href="#">This is a link</a>
