--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="card-content white-text">
               <span class="card-title">Calculator</span>
               <div class="card-panel">
-                <p class="blue-text text-darken-2">Hola</p>
+                <p id="result" class="blue-text text-darken-2">Hola</p>
               </div>
               <div class="row">
 
@@ -52,7 +52,7 @@
                       <span class="white-text">9</span>
                     </div>
                   </div>
-                  <div class="col s3">
+                  <div class="col s3" onclick="clean();">
                     <div class="card-panel teal">
                       <span class="white-text">C</span>
                     </div>
