--- a/index.html
+++ b/index.html
@@ -32,22 +32,22 @@
             <div class="card-content white-text">
               <span class="card-title">Calculator</span>
               <div class="card-panel">
-                <p id="result" class="blue-text text-darken-2">Hola</p>
+                <p id="result" class="blue-text text-darken-2"></p>
               </div>
               <div class="row">
 
                 <div class="col s12">
-                  <div class="col s3">
+                  <div class="col s3" onclick="addScreen('7')">
                     <div class="card-panel teal">
                       <span class="white-text">7</span>
                     </div>
                   </div>
-                  <div class="col s3">
+                  <div class="col s3" onclick="addScreen('8')">
                     <div class="card-panel teal">
-                      <span class="white-text">8</span>
+                      <span class="white-text" >8</span>
                     </div>
                   </div>
-                  <div class="col s3">
+                  <div class="col s3" onclick="addScreen('9')">
                     <div class="card-panel teal">
                       <span class="white-text">9</span>
                     </div>
@@ -59,62 +59,62 @@
                   </div>
                 </div>
                 <div class="col s12">
-                  <div class="col s3">
+                  <div class="col s3" onclick="addScreen('4')">
                     <div class="card-panel teal">
                       <span class="white-text">4</span>
                     </div>
                   </div>
-                  <div class="col s3">
+                  <div class="col s3" onclick="addScreen('5')">
                     <div class="card-panel teal">
                       <span class="white-text">5</span>
                     </div>
                   </div>
-                  <div class="col s3">
+                  <div class="col s3" onclick="addScreen('6')">
                     <div class="card-panel teal">
                       <span class="white-text">6</span>
                     </div>
                   </div>
-                  <div class="col s3">
+                  <div class="col s3" onclick="addScreen('+')">
                     <a class="btn-floating btn-large waves-effect waves-light red"><i class="material-icons">add</i></a>
                   </div>
                 </div>
                 <div class="col s12">
-                  <div class="col s3">
+                  <div class="col s3" onclick="addScreen('1')">
                     <div class="card-panel teal">
                       <span class="white-text">1</span>
                     </div>
                   </div>
-                  <div class="col s3">
+                  <div class="col s3" onclick="addScreen('2')">
                     <div class="card-panel teal">
                       <span class="white-text">2</span>
                     </div>
                   </div>
-                  <div class="col s3">
+                  <div class="col s3" onclick="addScreen('3')">
                     <div class="card-panel teal">
                       <span class="white-text">3</span>
                     </div>
                   </div>
-                  <div class="col s3">
+                  <div class="col s3" onclick="addScreen('-')">
                     <a class="btn-floating btn-large waves-effect waves-light red"><i class="material-icons">remove</i></a>
                   </div>
                 </div>
                 <div class="col s12">
-                  <div class="col s3">
+                  <div class="col s3" onclick="addScreen('.')">
                     <div class="card-panel teal">
                       <span class="white-text">.</span>
                     </div>
                   </div>
-                  <div class="col s3">
+                  <div class="col s3" onclick="addScreen('0')">
                     <div class="card-panel teal">
                       <span class="white-text">0</span>
                     </div>
                   </div>
-                  <div class="col s3">
+                  <div class="col s3" onclick="">
                     <div class="card-panel teal">
                       <span class="white-text">=</span>
                     </div>
                   </div>
-                  <div class="col s3">
+                  <div class="col s3" onclick="addScreen('*')">
                     <a class="btn-floating btn-large waves-effect waves-light red"><i class="material-icons">clear</i></a>
                   </div>
                 </div>
