make more beautiul the frontend

--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
   <nav class="white" role="navigation">
     <div class="nav-wrapper container">
       <a id="logo-container" href="#" class="brand-logo">Ezequiel González García</a>
-      <ul class="right hide-on-med-and-down">
-        <li><a href="#">Navbar</a></li>
-      </ul>
+      <!--<ul class="right hide-on-med-and-down">
+        <li><a href="#">Navbar</a>
+
+        </li>
+      </ul>-->
 
       <ul id="nav-mobile" class="side-nav" style="left: -250px;">
         <li><a href="#">Navbar Link</a></li>
@@ -74,8 +76,13 @@
                       <span class="white-text">6</span>
                     </div>
                   </div>
-                  <div class="col s3" onclick="operar('+')">
-                    <a class="btn-floating btn-large waves-effect waves-light red"><i class="material-icons">add</i></a>
+                  <div class="col s3" onclick="">
+                    <div class="col s3" onclick="operar('+')">
+                      <a class="btn-floating btn-large waves-effect waves-light red"><i class="material-icons">add</i></a>
+                    </div>
+                    <div class="col s3" onclick="operar('-')">
+                      <a class="btn-floating btn-large waves-effect waves-light red"><i class="material-icons">remove</i></a>
+                    </div>
                   </div>
                 </div>
                 <div class="col s12">
@@ -94,9 +101,7 @@
                       <span class="white-text">3</span>
                     </div>
                   </div>
-                  <div class="col s3" onclick="operar('-')">
-                    <a class="btn-floating btn-large waves-effect waves-light red"><i class="material-icons">remove</i></a>
-                  </div>
+
                 </div>
                 <div class="col s12">
                   <div class="col s3" onclick="addScreen('.')">
@@ -134,34 +139,25 @@
     <div class="container">
       <div class="row">
         <div class="col l6 s12">
-          <h5 class="white-text">Company Bio</h5>
-          <p class="grey-text text-lighten-4">We are a team of college students working on this project like it's our full time job. Any amount would help support and continue development on this project and is greatly appreciated.</p>
+          <h5 class="white-text">Resume</h5>
+          <p class="grey-text text-lighten-4">
+            Hi, my name is Ezequiel, i make this calculator for the opportunity of Front- End in China ,add me in my social networks greetings.
+          </p>
 
 
         </div>
         <div class="col l3 s12">
-          <h5 class="white-text">Settings</h5>
-          <ul>
-            <li><a class="white-text" href="#!">Link 1</a></li>
-            <li><a class="white-text" href="#!">Link 2</a></li>
-            <li><a class="white-text" href="#!">Link 3</a></li>
-            <li><a class="white-text" href="#!">Link 4</a></li>
-          </ul>
-        </div>
-        <div class="col l3 s12">
-          <h5 class="white-text">Connect</h5>
-          <ul>
-            <li><a class="white-text" href="#!">Link 1</a></li>
-            <li><a class="white-text" href="#!">Link 2</a></li>
-            <li><a class="white-text" href="#!">Link 3</a></li>
-            <li><a class="white-text" href="#!">Link 4</a></li>
-          </ul>
+          <h5 class="white-text">Social</h5>
+          <div class="social">&#62220;</div>
+          <div class="social">&#62217;</div>
+          <div class="social">&#62232;</div>
+          <div class="social">GIT</div>
         </div>
       </div>
     </div>
     <div class="footer-copyright">
-      <div class="container">
-      Made by <a class="brown-text text-lighten-3" href="">Ezequiel</a>
+      <div class="container center-align">
+      Made with <i class="material-icons" class="red">favorite</i>Ezequiel</a>
       </div>
     </div>
   </footer>
