--- a/index.html
+++ b/index.html
@@ -146,12 +146,12 @@
 
 
         </div>
-        <div class="col l3 s12">
-          <h5 class="white-text">Social</h5>
-          <div class="social">&#62220;</div>
-          <div class="social">&#62217;</div>
-          <div class="social">&#62232;</div>
-          <div class="social">GIT</div>
+        <div class="col l6 s12">
+          <h5 class="">Social</h5>
+          <a href="https://www.facebook.com/ezeezeGarcia"><div class="social">&#62220;</div></a>
+          <a href="https://twitter.com/ezeezegg"><div class="social">&#62217;</div></a>
+          <a href="https://mx.linkedin.com/in/ezeezegg"><div class="social">&#62232;</div></a>
+          <a href="https://github.com/ezegg"><div class="social">GIT</div></a>
         </div>
       </div>
     </div>
