--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
   <div id="index-banner" class="parallax-container">
 
     <div class="row">
+      <div class="col l12 s12">
+        <p class="grey-text text-lighten-4">
+          Hi, my name is Ezequiel, i make this calculator for the opportunity of Front- End in China ,add me in my social networks greetings.
+        </p>
+      </div>
         <div class="col s12 m12">
           <div class="card blue-grey darken-1">
             <div class="card-content white-text">
@@ -76,11 +81,11 @@
                       <span class="white-text">6</span>
                     </div>
                   </div>
-                  <div class="col s3" onclick="">
-                    <div class="col s3" onclick="operar('+')">
+                  <div class="col s3 center-align" onclick="">
+                    <div class="col s6" onclick="operar('+')">
                       <a class="btn-floating btn-large waves-effect waves-light red"><i class="material-icons">add</i></a>
                     </div>
-                    <div class="col s3" onclick="operar('-')">
+                    <div class="col s6" onclick="operar('-')">
                       <a class="btn-floating btn-large waves-effect waves-light red"><i class="material-icons">remove</i></a>
                     </div>
                   </div>
@@ -119,13 +124,13 @@
                       <span class="white-text">=</span>
                     </div>
                   </div>
-                  <div class="col s3" onclick="">
+                  <div class="col s3 center-align" onclick="">
 
-                    <div class="col s3" onclick="operar('*')">
+                    <div class="col s6" onclick="operar('*')">
                       <a class="btn-floating btn-large waves-effect waves-light red"><i class="material-icons">clear</i></a>
                     </div>
-                    <div class="col s3" onclick="operar('/')">
-                      <a class="btn-floating btn-large waves-effect waves-light red"><i class="material-icons">check</i></a>
+                    <div class="col s6" onclick="operar('/')">
+                      <a class="btn-floating btn-large waves-effect waves-light red">/</a>
                     </div>
                   </div>
                 </div>
@@ -138,16 +143,8 @@
   <footer class="page-footer teal">
     <div class="container">
       <div class="row">
-        <div class="col l6 s12">
-          <h5 class="white-text">Resume</h5>
-          <p class="grey-text text-lighten-4">
-            Hi, my name is Ezequiel, i make this calculator for the opportunity of Front- End in China ,add me in my social networks greetings.
-          </p>
-
-
-        </div>
-        <div class="col l6 s12">
-          <h5 class="">Social</h5>
+        <div class="col l12 s12">
+          <h5 class="">Social networks</h5>
           <a href="https://www.facebook.com/ezeezeGarcia"><div class="social">&#62220;</div></a>
           <a href="https://twitter.com/ezeezegg"><div class="social">&#62217;</div></a>
           <a href="https://mx.linkedin.com/in/ezeezegg"><div class="social">&#62232;</div></a>
