--- a/index.html
+++ b/index.html
@@ -82,12 +82,15 @@
                     </div>
                   </div>
                   <div class="col s3 center-align" onclick="">
-                    <div class="col s6" onclick="operar('+')">
-                      <a class="btn-floating btn-large waves-effect waves-light red"><i class="material-icons">add</i></a>
+                    <div class="row">
+                      <div class="col s6" onclick="operar('+')">
+                        <a class="btn-floating btn-large waves-effect waves-light red"><i class="material-icons">add</i></a>
+                      </div>
+                      <div class="col s6" onclick="operar('-')">
+                        <a class="btn-floating btn-large waves-effect waves-light red"><i class="material-icons">remove</i></a>
+                      </div>
                     </div>
-                    <div class="col s6" onclick="operar('-')">
-                      <a class="btn-floating btn-large waves-effect waves-light red"><i class="material-icons">remove</i></a>
-                    </div>
+
                   </div>
                 </div>
                 <div class="col s12">
@@ -125,12 +128,13 @@
                     </div>
                   </div>
                   <div class="col s3 center-align" onclick="">
-
-                    <div class="col s6" onclick="operar('*')">
-                      <a class="btn-floating btn-large waves-effect waves-light red"><i class="material-icons">clear</i></a>
-                    </div>
-                    <div class="col s6" onclick="operar('/')">
-                      <a class="btn-floating btn-large waves-effect waves-light red">/</a>
+                    <div class="row">
+                      <div class="col s6" onclick="operar('*')">
+                        <a class="btn-floating btn-large waves-effect waves-light red"><i class="material-icons">clear</i></a>
+                      </div>
+                      <div class="col s6" onclick="operar('/')">
+                        <a class="btn-floating btn-large waves-effect waves-light red">/</a>
+                      </div>
                     </div>
                   </div>
                 </div>
